# NSE_EOD

./: .env  .env.cloud  .env.example  .gitignore  Dockerfile  SPECIFICATION.md  cloud-deployed.md  gemini.md  pyproject.toml
config/: constants.py  settings.py
deploy/: nginx-nse-eod.conf  nse-eod.service  setup.sh
scripts/: backfill_historical_indexes.py  backup_utils.py  db_recovery.py  init_db.py  migrate_foreign_keys.py  migrate_to_postgres.py  populate_database_stages.py  populate_test_data.py  run_historical_postprocess.py  run_sync_cli.py  run_sync_cli.py.bak  test_404_ignoring_sync.py  test_bse_api.py  test_bse_integration.py  test_cookie_flow.py  test_corporate_action_parsing.py  test_corporate_action_processed.py  test_corporate_actions_client.py  test_db_recovery.py  test_divide_by_zero_guard.py  test_download.py  test_empty_etf_symbols_guard.py  test_endpoints.py  test_equity_l_shares.py  test_excel_target_date.py  test_fixes.py  test_fixes_extended.py  test_gap_recovery.py  test_historical_shares.py  test_http1.py  test_incomplete_sync.py  test_incomplete_sync.py.bak  test_incremental.py  test_init_db_tables.py  test_isin_backup_fixes.py  test_log_streamer_limit.py  test_nodriver.py  test_phase3.py  test_phase4.py  test_playwright.py  (+15 more)
src/: main.py
src/db/: engine.py  repository.py
src/models/: __init__.py  corporate_action.py  historical_share.py  indicator.py  market_cap.py  security.py  security_index.py  symbol_change.py  sync_log.py
src/nse_eod_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+53 files in other folders)
